[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wilds-bridge"
version = "0.1.0"
description = "LDT ActiveMQ bridge for the WILDS spectrograph"
requires-python = ">=3.10"
dependencies = [
    "stomp.py>=4.1.21",
    "pydantic>=2.0",
    "pydantic-xml>=2.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wilds"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
